@@ -28,7 +28,7 @@ import org.apache.tinkerpop.gremlin.process.traversal.TraversalStrategy;
 import org.apache.tinkerpop.gremlin.server.auth.AllowAllAuthenticator;
 import org.apache.tinkerpop.gremlin.server.auth.Authenticator;
 import org.apache.tinkerpop.gremlin.server.channel.WebSocketChannelizer;
-import org.apache.tinkerpop.gremlin.server.util.BasicGraphManager;
+import org.apache.tinkerpop.gremlin.server.util.DefaultGraphManager;
 import info.ganglia.gmetric4j.gmetric.GMetric;
 import org.apache.tinkerpop.gremlin.server.util.LifeCycleHook;
 import org.apache.tinkerpop.gremlin.structure.Graph;
@@ -178,7 +178,7 @@ public class Settings {
     /**
      * The full class name of the {@link GraphManager} to use in Gremlin Server.
      */
-    public String graphManager = BasicGraphManager.class.getName();
+    public String graphManager = DefaultGraphManager.class.getName();
 
     /**
      * Configured metrics for Gremlin Server.
